chore: refactor tests